# src/docs/openapi.json
@@ -48,6 +48,48 @@
         "x-codegen-request-body-name": "Body"
       }
     },
+    "/api/v1/logout": {
+      "get": {
+        "tags": ["V1"],
+        "summary": "Logout",
+        "description": "Cerrar sesión",
+        "operationId": "Logout",
+        "responses": {
+          "200": { "description": "", "content": {} },
+          "401": {
+            "description": "Unauthorized",
+            "headers": {
+              "Keep-Alive": {
+                "schema": { "type": "string", "default": "timeout=5" }
+              },
+              "Connection": {
+                "schema": { "type": "string", "default": "keep-alive" }
+              },
+              "Vary": { "schema": { "type": "string", "default": "Origin" } },
+              "Content-Length": {
+                "schema": { "type": "string", "default": "8618" }
+              },
+              "Date": {
+                "schema": {
+                  "type": "string",
+                  "default": "Sat, 06 Nov 2021 00:40:08 GMT"
+                }
+              }
+            },
+            "content": {
+              "application/json; charset=utf-8": {
+                "schema": { "type": "string", "default": "" }
+              },
+              "text/plain; charset=utf-8": {
+                "schema": { "type": "string", "default": "" },
+                "example": "Unauthorized"
+              }
+            }
+          }
+        },
+        "deprecated": false
+      }
+    },
     "/api/v1/kardex": {
       "get": {
         "tags": ["V1"],
